Refactor of validations in methods, negative test cases for createDocuments working